--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -257,8 +257,10 @@ button:active {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 95%;
+  width: 100%;
   margin: auto;
+  min-height: 100vh;
+  background-image: url("/Fondo_Menu.jpg");
   h2 {
     color: #6d6d7c;
   }
@@ -283,6 +285,9 @@ button:active {
     .btn_opt {
       display: block;
       width: 15%;
+      &:active {
+        transform: scale(0.9);
+      }
       img {
         width: 100%;
         max-width: 30px;
@@ -329,5 +334,118 @@ button:active {
     font-size: 0.8rem;
     letter-spacing: 1px;
     margin-top: 3em;
+    margin-bottom: 9em;
+  }
+}
+
+.sidebar {
+  position: fixed;
+  left: 0.5em;
+  top: 1em;
+  font-size: 1.5rem;
+  background-color: #f2eadf;
+  padding: 0.2em;
+  border-radius: 5px;
+  &:active {
+    transform: scale(0.9);
+  }
+}
+
+.sidebar_body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  min-width: 70vw;
+  background-color: #fff;
+  z-index: 2000;
+  transition: 500ms ease-in-out;
+  overflow: hidden;
+  .pink_area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 3em;
+    font-weight: bold;
+    font-family: 'Inter', sans-serif;
+    background-color: #e1b1af;
+    color: #fff;
+    img {
+      border-radius: 100%;
+    }
+  }
+  .anima {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    transition: 500ms ease-in-out;
+  }
+  button {
+    position: absolute;
+    width: 90%;
+    bottom: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #e1b1af;
+    color: #fff;
+    padding: 0.8em;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+  }
+}
+
+.wrapper {
+  display: block;
+  position: fixed;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.377);
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+}
+
+.home_bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: -0.4em;
+  border: 2px solid #ad423c;
+  padding: 0.5em;
+  background-color: #d8c2b7;
+  gap: 1.3em;
+  border-radius: 150px;
+  margin-bottom: 2em;
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    color: #fa7470;
+    padding: 0.5em;
+    font-size: 1.2rem;
+    border-radius: 100%;
+    border: none;
+  }
+}
+
+.photo_popup {
+  position: fixed;
+  min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 250ms ease;
+  img {
+    width: 80%;
+    border-radius: 10px;
+    
   }
 }
