--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,6 +19,19 @@ body {
   margin: 0;
 }
 
+.home, .servicios {
+  animation: appear 250ms ease-in-out;
+}
+
+@keyframes appear {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
 .inicio {
   display: flex;
   align-items: center;
@@ -447,5 +460,104 @@ button:active {
     width: 80%;
     border-radius: 10px;
     
+  }
+}
+
+// Servicios
+
+.options {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  width: 95%;
+  margin: auto;
+  .btn_opt {
+    display: block;
+    width: 15%;
+    &:active {
+      transform: scale(0.9);
+    }
+    img {
+      width: 100%;
+      max-width: 20px;
+      max-height: 5;
+      background-color: #fff;
+      box-shadow: 0px 0px 6px rgba(128, 128, 128, 0.356);
+      padding: 1em;
+      border-radius: 100%;
+    }
+    span {
+      display: block;
+      width: 100%;
+      font-size: 0.6rem;
+      padding: 0.1em;
+      text-align: center;
+    }
+  }
+}
+
+.servicios {
+  display: block;
+  width: 100%;
+  margin: auto;
+  img {
+    width: 100%;
+  }
+  .go_back {
+    display: flex;
+    gap: 0.5em;
+    padding: 0.5em;
+    width: 95%;
+  }
+  .precios_list {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: auto;
+    margin-top: 0.5em;
+    h1 {
+      display: block;
+      font-size: 1rem;
+      font-family: 'Inter', sans-serif;
+      text-align: center;
+      color: rgb(63, 45, 45);
+      padding: 1em;
+    }
+    span {
+      display: block;
+      font-size: 0.8rem;
+      font-family: 'Inter', sans-serif;
+      text-align: center;
+      border-top: 1px solid rgb(219, 206, 206);
+      padding: 0.7em;
+      &.active {
+        font-weight: bold;
+        font-size: 0.9rem;
+      }
+    }
+    &:nth-child(2) {
+      border: none;
+    }
+  }
+  button {
+    display: block;
+    width: 90%;
+    background-color: #e1b1af;
+    color: #fff;
+    padding: 0.8em;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    margin: auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    &:disabled {
+      color: gray;
+      cursor: not-allowed;
+      transform: scale(0.9);
+    }
   }
 }
