--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1021,6 +1021,10 @@ a {
   color: rgb(36, 31, 31);
   width: 60%;
   margin: auto;
-  margin-top: 4em;
-  font-size: 0.8rem;
+  margin-top: 8em;
+  
+  h1 {
+    font-weight: bold !important;
+    font-size: 1.2rem !important;
+  }
 }
