--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -484,6 +484,7 @@ button:active {
 .photo_popup {
   position: fixed;
   min-height: 100vh;
+  width: 100vw;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 2000;
   display: flex;
